Added Selenoid,log4j,,methods for video attachments