@@ -1,6 +1,7 @@
 package com.project.webdriver;
 
 import org.omg.CORBA.SystemException;
+import org.openqa.selenium.Dimension;
 import org.openqa.selenium.Platform;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.firefox.FirefoxDriver;
@@ -9,6 +10,7 @@ import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 
@@ -16,17 +18,24 @@ public class Driver {
 
     private static WebDriver driver;
 
-    public static WebDriver getDriver()  {
+    public static WebDriver getDriver() {
         if (driver == null) {
-            DesiredCapabilities capabilities = DesiredCapabilities.firefox();
-            capabilities.setBrowserName("firefox");
-            capabilities.setPlatform(Platform.LINUX);
+            DesiredCapabilities browser = new DesiredCapabilities();
+            browser.setBrowserName("chrome");
+            browser.setVersion("65.0");
+            browser.setCapability("enableVNC", true);
+            browser.setCapability("enableVideo", true);
+            browser.setCapability("screenResolution", "1920x1080x24");
+
             try {
-                driver =  new RemoteWebDriver(new URL("http://127.0.0.1:4444/wd/hub"), capabilities);
+
+                driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(), browser);
+                driver.manage().window().setSize(new Dimension(1920, 1080));
+
             } catch (MalformedURLException e) {
                 e.printStackTrace();
+            }
         }
-    }
         return driver;
     }
 
